2004-04-02  Ted Gould <ted@gould.cx>

	* src/file.cpp, src/extension/db.cpp, src/extension/internal/svg.cpp:
	Changing it so that SVG documents open and default to with
	extension namespace.  Also, autodetect is reenabled.

2004-04-03  Peter  <pmoulder@river>

	* src/helper/bezier-utils.cpp (NewtonRaphsonRootFind): Fix my
	previous commit.

2004-04-02  Ted Gould <ted@gould.cx>

	* share/extensions/svgz_output.inkmod, src/main.cpp, src/print.cpp,
	  src/extension/init.cpp, src/extension/implementation/script.cpp,
	  src/extension/implementation/script.h,
	  src/extension/internal/Makefile.am, src/extension/internal/ps-out.cpp,
	  src/extension/internal/ps-out.h, src/extension/internal/ps.cpp:
	Fixing the commandline printing.  This required fixing both the
	print driver to handle the newer extensions stuff.  It seems
	happy now.  I went ahead and implemented save as postscript
	while I was at it.

2004-04-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/helper/bezier-utils.cpp (NewtonRaphsonRootFind): Ensure that the
	"improved" value is never worse than the previous guess.

	* src/helper/bezier-utils.cpp:
	Greater CodingStyle conformance, mainly whitespace changes.

	* src/helper/bezier-utils.cpp (sp_bezier_fit_cubic_full):
	Always reparameterize between generate_bezier and calc_max_error.
	Switch from discouraged alloca (see man page) to g_new, at cost of
	some extra g_free calls in the code.
	(reparameterize): Do in-place modification.

	* src/helper/bezier-utils-test.cpp:
	Add tests for generate_bezier, sp_bezier_fit_cubic_full.
	Change to a simpler test bezier.

	* src/helper/bezier-utils.cpp (sp_darray_left_tangent,
	sp_darray_right_tangent):
	Switch to using just the two end points for calculating the gradient.
	(The old code could sometimes cause g_warning's.) 
	Correct the documentation of requirements.
	(sp_darray_center_tangent): Similarly remove the #if'ed out code for
	looking at more than two points.

2004-03-31  Ted Gould <ted@gould.cx>
